update instructors on 01-slides.Rmd

--- a/website/static/slides/01-welcome/slides.Rmd
+++ b/website/static/slides/01-welcome/slides.Rmd
@@ -60,11 +60,10 @@ library(sass)
 sass(sass_file("theme.sass"), output = "theme.css")
 ```
 
-# Instructors
+# Instructor
 
-- George Gerald Vega Yon
 - Kim Siegmund
-- Abigail Horn
+
 
 
 ---
