--- a/website/content/syllabus/index.Rmd
+++ b/website/content/syllabus/index.Rmd
@@ -51,9 +51,9 @@ Computation using R (downloaded from http://cran.r-project.org), and development
 
 ## Description and Assessment of Assignments
 
-**Assignments:** There will be 5-6 assignments given throughout the semester, approximately every week. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated. All assignments must be completed in R Markdown, and submitted through the Github classes portal of the course. Late assignments will be penalized by 20% for each day past the due date.
+**Assignments:** There will be 5 assignments given throughout the semester, approximately 1 every 2 weeks. Students may discuss the problems with one another, however, individual solutions must be submitted and copying will not be tolerated. All assignments must be completed in R Markdown, and submitted through the Github classes portal of the course. Late assignments will be penalized by 20% for each day past the due date.
 
-**Final Project:** The final project will be to develop a reproducible R package, Shiny app, or pipeline for analysis applied to a real-world dataset.
+**Final Project:** The final project will be to write a report for an analysis applied to a real-world dataset and to create a website that includes interactive visualizations to display data/results. The source code, website files, PDF report, will be uploaded to GitHub.
 
 **Labs:** Lab attendance is mandatory and participation in the lab is required and counts as part of the overall lab grade.
 
@@ -62,7 +62,7 @@ Computation using R (downloaded from http://cran.r-project.org), and development
 | Assignment           | % of Grade |
 |----------------------|------------|
 | Labs                 | 20%        |
-| Homework (6)         | 30%        |
+| Homework (5)         | 30%        |
 | Midterm Exam         | 20%        |
 | Final Project        | 30%        |
 | TOTAL                | 100%       |
@@ -78,10 +78,6 @@ Assignments shall be submitted on the Github classroom portal of the course. Lat
 As the weeks go by, consult the [Schedule Page](/PM566/schedule/) for more information on weekly topics, problem sets, readings, and other materials. The schedule is likely to change as we go. Links to readings, assignments, and other materials from class will be posted on that page. 
 
 
-## Statement for students with disabilities
-
-Any student requesting academic accommodations based on a disability is required to register with Disability Services and Programs (DSP) each semester. A letter of verification for approved accommodations can be obtained from DSP. Please be sure the letter is delivered to me (or to TA) as early in the semester as possible. DSP is located in STU 301 and is open 8:30 a.m.–5:00 p.m., Monday through Friday. The phone number for DSP is (213) 740-0776.
-
 ## Statement on academic conduct and support systems
 
 ### Academic Conduct:
@@ -89,43 +85,67 @@ Any student requesting academic accommodations based on a disability is required
 Plagiarism – presenting someone else’s ideas as your own, either verbatim or recast in
 your own words – is a serious academic offense with serious consequences. Please
 familiarize yourself with the discussion of plagiarism in SCampus in Part B, Section 11,
-“Behavior Violating University Standards” policy.usc.edu/scampus-part-b. Other forms
+“Behavior Violating University Standards” http://policy.usc.edu/scampus-part-b. Other forms
 of academic dishonesty are equally unacceptable. See additional information in SCampus
-and university policies on scientific misconduct, policy.usc.edu/scientific-misconduct.
+and university policies on scientific misconduct, http://policy.usc.edu/research-and-scholarship-misconduct.
+
+### Students and Disability Accommodations: 
+
+USC welcomes students with disabilities into all of the University’s educational programs. The Office of Student Accessibility Services (OSAS) is responsible for the determination of appropriate accommodations for students who encounter disability-related barriers. Once a student has completed the OSAS process (registration, initial appointment, and submitted documentation) and accommodations are determined to be reasonable and appropriate, a Letter of Accommodation (LOA) will be available to generate for each course. The LOA must be given to each course instructor by the student and followed up with a discussion. This should be done as early in the semester as possible as accommodations are not retroactive. More information can be found at http://osas.usc.edu. You may contact OSAS at (213) 740-0776 or via email at osasfrontdesk@usc.edu.
+
 
 ### Support Systems:
 
-*Student Counseling Services (SCS) - (213) 740-7711 – 24/7 on call*  
-Free and confidential mental health treatment for students, including short-term psychotherapy, group counseling, stress fitness workshops, and crisis intervention. https://engemannshc.usc.edu/counseling/
+*Counseling and Mental Health - (213) 740-9355 – 24/7 on call*  
+https://studenthealth.usc.edu/counseling/   
+Free and confidential mental health treatment for students, including short-term psychotherapy, group counseling, stress fitness workshops, and crisis intervention. 
 
-*National Suicide Prevention Lifeline - 1-800-273-8255*  
-Provides free and confidential emotional support to people in suicidal crisis or emotional distress 24 hours a day, 7 days a week. http://www.suicidepreventionlifeline.org
+*National Suicide Prevention Lifeline - dial 988 – 24/7 on call*   
+http://www.suicidepreventionlifeline.org  
+Provides free and confidential emotional support to people in suicidal crisis or emotional distress 24 hours a day, 7 days a week. 
 
-*Relationship and Sexual Violence Prevention Services (RSVP) - (213) 740-4900 - 24/7 on call*  
-Free and confidential therapy services, workshops, and training for situations related to gender-based harm. https://engemannshc.usc.edu/rsvp/
+*Relationship and Sexual Violence Prevention Services (RSVP) - (213) 740-9355(WELL), press “0” after hours – 24/7 on call*  
+https://studenthealth.usc.edu/sexual-assault  
+Free and confidential therapy services, workshops, and training for situations related to gender-based harm. 
 
-*Sexual Assault Resource Center*  
-For more information about how to get help or help a survivor, rights, reporting options, and additional resources, visit the website: http://sarc.usc.edu/
+*Office for Equity, Equal Opportunity, and Title IX (EEO-TIX) - (213) 740-5086*  
+http://eeotix.usc.edu  
+Information about how to get help or help someone affected by harassment or discrimination, rights of protected classes, reporting options, and additional resources for students, faculty, staff, visitors, and applicants. 
 
-*Office of Equity and Diversity (OED)/Title IX compliance – (213) 740-5086*  
-Works with faculty, staff, visitors, applicants, and students around issues of protected class. https://equity.usc.edu/
+*Reporting Incidents of Bias or Harassment - (213) 740-5086 or (213) 821-8298*  
+http://usc-advocate.symplicity.com/care_report  
+Avenue to report incidents of bias, hate crimes, and microaggressions to the Office for Equity, Equal Opportunity, and Title for appropriate investigation, supportive measures, and response.
 
-*Bias Assessment Response and Support*  
-Incidents of bias, hate crimes and microaggressions need to be reported allowing for appropriate investigation and response. https://studentaffairs.usc.edu/bias-assessment-response-support/
+*The Office of Student Accessibility Services (OSAS) - (213) 740-0776*  
+http://osas.usc.edu  
+OSAS ensures equal access for students with disabilities through providing academic accommodations and auxiliary aids in accordance with federal laws and university policy.
 
-*The Office of Disability Services and Programs*  
-Provides certification for students with disabilities and helps arrange relevant accommodations. http://dsp.usc.edu
+*USC Campus Support and Intervention - (213) 821-4710*   
+http://campussupport.usc.edu  
+Assists students and families in resolving complex personal, financial, and academic issues adversely affecting their success as a student.
 
-*Student Support and Advocacy – (213) 821-4710*  
-Assists students and families in resolving complex issues adversely affecting their success as a student EX: personal, financial, and academic. https://studentaffairs.usc.edu/ssa/
+*Diversity, Equity and Inclusion - (213) 740-2101*  
+http://diversity.usc.edu  
+Information on events, programs and training, the Provost’s Diversity and Inclusion Council, Diversity Liaisons for each academic school, chronology, participation, and various resources for students. 
 
-*Diversity at USC*  
-Information on events, programs and training, the Diversity Task Force (including representatives for each school), chronology, participation, and various resources for students. https://diversity.usc.edu/
 
-*USC Emergency Information*  
-Provides safety and other updates, including ways in which instruction will be continued if an officially declared emergency makes travel to campus infeasible, http://emergency.usc.edu
+*USC Emergency - UPC: (213) 740-4321, HSC: (323) 442-1000 – 24/7 on call*   
+http://dps.usc.edu, http://emergency.usc.edu  
+Emergency assistance and avenue to report a crime. Latest updates regarding safety, including ways in which instruction will be continued if an officially declared emergency makes travel to campus infeasible.
 
-*USC Department of Public Safety – 213-740-4321 (UPC) and 323-442-1000 (HSC) for 24-hour emergency assistance or to report a crime*  
-Provides overall safety to USC community. http://dps.usc.edu
+*USC Department of Public Safety - UPC: (213) 740-6000, HSC: (323) 442-1200 – 24/7 on call*   
+http://dps.usc.edu  
+Non-emergency assistance or information.
+
+*Office of the Ombuds - (213) 821-9556 (UPC) / (323-442-0382 (HSC)*  
+http://ombuds.usc.edu    
+A safe and confidential place to share your USC-related issues with a University Ombuds who will work with you to explore options or paths to manage your concern.
+
+*Occupational Therapy Faculty Practice - (323) 442-3340* or   
+otfp@med.usc.edu, http://chan.usc.edu/otfp   
+Confidential Lifestyle Redesign services for USC students to support health promoting habits and routines that enhance quality of life and academic performance. 
+
+
+
 
 
